assets/css/styles.css
/* ... */
/* logo styles */
#logo-div {
    display: flex;
    flex-direction: column;
    flex-basis: 75%;
    font-size: 80%;
    position: relative;
    top: -5px;
}

#logo {
    white-space: nowrap;
    text-transform: capitalize;
    min-height: 1.5em;
    margin-top: .35em;
}


/* navbar styles */

#nav-menu {
    font-size: 110%;
    letter-spacing: 1.5px;
    list-style-type: none;
}

#nav-menu>li {
    margin-bottom: .2em;
}

/* it seems this is separate in order to do some flex box things */
nav {
    position: absolute;
    /*border-top: 3px solid #3a3a3a;
    border-bottom: 3px solid #3a3a3a;*/
    border-top: 3px solid white;
    border-bottom: 3px solid white;
    width: 100%;
    left: 0;
    padding-left: 1rem;
    padding-top: .7rem;
    padding-bottom: .35em;
    display: none;
    top: 100%;
    /*background-color: #E5E4E2;*/
    background-color: #222831;
}

/* indicates which page a user is on */
.active {
    /*border: 1.5px solid #3a3a3a;*/
    border: 1.5px solid white;
    padding: 1px 5px;
    border-radius: 5px;
    margin: -1.5px;
}

/* nav toggle icon styles*/
#nav-toggle-label {
    width: 100vw;
    display: flex;
    flex-direction: row;
    align-items: center;
}

/* is there a way to address this more responsively? */
#icon-div {
    flex-basis: 20%;
    position: relative;
    top: -3em;
    left: 90%;
}

#nav-toggle-icon {
    font-size: 225%;
    margin-bottom: -2.5rem;
    align-self: center;
}

/* displays nav section when clicked*/
#nav-toggle:checked~nav {
    display: block;
}

/* hides nav section until clicked*/
#nav-toggle {
    display: none;
}

/*end nav styles*/
/*end header styles*/

/* main */
main {
    /* sticks footer to bottom */
    flex: 1 0 auto;
    margin-top: 5em;
    margin-bottom: 4em;
    align-items: center;
}

/* Landing page styles */
#landing-page {
    display: flex;
    flex-direction: column;
    margin-top: -3.6em;
    font-size: 99%;
}

.landing-page-text {
    display: flex;
    flex-direction: column;
    /* this syle needs to be addressed later */
    background-color: rgba(34, 40, 49,0.6);
    width: 60%;
    padding: 10px;
    border-radius: 10px;
    width: auto;
    height: fit-content;
}

/* div for hero images */
.hero-div {
    height: 600px;
    width: 100%;
    display: flex;
    position: relative;
}

/* utility classes */

.bold {
    font-weight: 900;
    display: contents;
}

.position-absolute {
    position: absolute;
}

.centered-text {
    text-align: center;
}

/* prevents smaller elements from also having a background */
.transparent-background {
    background: transparent;
}

/* mobile landing page styles*/

/* orients mobile landing page container*/
#mobile-lp {
    display: flex;
    position: relative;
    flex-direction: column;
}

/* hero1 styles */
#hero1 {
    background: url('../images/hero-images/hero1-img.jpg') no-repeat center center/cover;
    width: 100%;
    height: 372px;
}

/* positions cover-text for hero1 image */
.hero1-text1 {
    top: 4em;
    left: 1em;
    white-space: nowrap;
}

.hero1-text2 {
    bottom: 6em;
    right: 1em;
    font-size: 94%;
}

/* hero2 styles */
#hero2 {
    background: url('../images/hero-images/hero2-img.jpg') no-repeat center center/cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10%;
}

/* first container for content on second hero image */
#hero2-first-block {
    display: flex;
    flex-direction: row;
    gap: 15%;
    justify-content: center;
    align-items: center;
    margin: 0% 6% 0% 6%;
    position: relative;
}

.hero2-first-block-text {
    width: 100%;
}

/* second container for content on second hero image*/
#hero2-column-block {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin-left: 6%;
    margin-right: 6%;
    position: relative;
    height: 18em;
    bottom: -1.5em;
}


#hero3 {
    background: url('../images/hero-images/hero3-img.jpg') no-repeat center center/cover;
    display: none;
}

/* content pages styling */
/* used to on content pages as generic containers for positioning and common styling */
.container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    position: relative;
    margin-bottom: 22px;
}

/* styles game cover images */
.game-cover {
    height: 65vw;
    width: 65vw;
    margin-top: 2em;
    margin-bottom: 2em;
    /* rounds corners of image */
    border-radius: 18%;
    /* keeps images from growing too much on larger screens */
    max-width: 300px;
    max-height: 300px;
    align-self: center;
}

.box {
    /*border: 3px solid #3a3a3a;*/
    /*background-color: #E5E4E2;*/
    background-color: #31363F;
    border: 3px solid white;
    border-radius: 10px;
}

/* styles headers for content sections */
.content-header {
    position: relative;
    width: 85%;
    padding: 0.5rem 0rem;
    margin-top: .5em;
    align-self: center;
    display: flex;
    justify-content: center;
    background-color: #222831;
}

/* styles text boxes */
.content {
    margin: 2vh;
    max-width: 80vw;
    padding: .7rem .7rem 1rem .7rem;
    align-self: center;
    background-color: #222831;
}

/* styles links to external sites */
.links {
    list-style-type: none;
    display: flex;
    position: relative;
    align-items: center;
    justify-content: space-around;
    padding: 0.7rem 0;
    margin-left: 3rem;
    margin-right: 3rem;
    background-color: #222831;
}

/* end content page styles */


/* form styles */
/*helps positions form */
#signup-section {
    display: flex;
    flex-direction: column;
    flex-shrink: 1;
}

/* styles actual form element*/
#signup-form {
    display: flex;
    flex-direction: column;
    padding: 1.5em;
    border-radius: 18%;
    width: 90%;
    /*width: fit-content;*/
    align-self: center;
    align-items: center;
    gap: 10px;
    position: relative;
    top: 1em;
    background-color: #222831;
}
/* ... */

